tests/cli_tests/snapshots/integration_test__cli_tests__emit_tests__emit_agent_skills.snap
---
source: tests/cli_tests/emit_tests.rs
assertion_line: 31
expression: "emit_to_format(\"agent-skills\")"
---
--- example-rule/SKILL.md ---
---
name: example-rule
description: An example rule
---
# Example Rule

This is the content of the example rule.
--- example-skill/SKILL.md ---
---
name: example-skill
description: An example skill
version: 1.0.0
license: MIT
---
# Example Skill

This is the content of the example skill.
