tests/cli_tests/snapshots/integration_test__cli_tests__emit_tests__emit_antigravity.snap
---
source: tests/cli_tests/emit_tests.rs
expression: "emit_to_format(\"antigravity\")"
---
--- example-rule.md ---
---
description: An example rule
---
# Example Rule

This is the content of the example rule.
--- skills/example-skill/SKILL.md ---
---
name: example-skill
description: An example skill
version: 1.0.0
license: MIT
---
# Example Skill

This is the content of the example skill.
