tests/cli_tests/snapshots/integration_test__cli_tests__emit_tests__emit_codex.snap
---
source: tests/cli_tests/emit_tests.rs
expression: "emit_to_format(\"codex\")"
---
# Example Skill

This is the content of the example skill.

# Example Rule

This is the content of the example rule.
