tests/cli_tests/snapshots/integration_test__cli_tests__emit_tests__emit_cursor_mdc.snap
---
source: tests/cli_tests/emit_tests.rs
expression: "emit_to_format(\"cursor-mdc\")"
---
--- example_skill.mdc ---
---
description: An example skill
---
# Example Skill

This is the content of the example skill.
--- example_rule.mdc ---
---
description: An example rule
---
# Example Rule

This is the content of the example rule.
