tests/cli_tests/snapshots/integration_test__cli_tests__emit_tests__emit_ir_json.snap
---
source: tests/cli_tests/emit_tests.rs
expression: "emit_to_format(\"ir-json\")"
---
{
  "entities": [
    {
      "kind": "skill",
      "metadata": {
        "name": "example-skill",
        "description": "An example skill",
        "version": "1.0.0",
        "license": "MIT"
      },
      "body": "# Example Skill\n\nThis is the content of the example skill."
    },
    {
      "kind": "rule",
      "metadata": {
        "description": "An example rule",
        "name": "example-rule"
      },
      "body": "# Example Rule\n\nThis is the content of the example rule."
    }
  ]
}
