tests/cli_tests/snapshots/integration_test__cli_tests__emit_tests__emit_ir_toml.snap
---
source: tests/cli_tests/emit_tests.rs
assertion_line: 61
expression: "emit_to_format(\"ir-toml\")"
---
ir_version = "0.1"

[[entities]]
kind = "skill"
body = """
# Example Skill

This is the content of the example skill."""

[entities.metadata]
name = "example-skill"
description = "An example skill"
version = "1.0.0"
license = "MIT"

[[entities]]
kind = "rule"
body = """
# Example Rule

This is the content of the example rule."""

[entities.metadata]
description = "An example rule"
name = "example-rule"
